[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-chainreserve"
version = "0.1.1"
description = "Open crypto market/reserve/seizure intelligence tracker (CEX reserves, ETF/treasury flows, seizures, strategic reserves, whales)"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["osint", "crypto", "cognis-digital", "cognis-neural-suite", "blockchain", "reserves"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/chainreserve"

[project.scripts]
"chainreserve-emit" = "chainreserve.connect:emit_main"
chainreserve = "chainreserve.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["chainreserve"]
artifacts = ["data/entities.json", "chainreserve/data_feeds_2026.json"]

[tool.hatch.build.targets.wheel.force-include]
"data/entities.json" = "data/entities.json"
"chainreserve/data_feeds_2026.json" = "chainreserve/data_feeds_2026.json"

[tool.hatch.metadata]
allow-direct-references = true
